Refactor MockInventoryService methods and types